# advent-of-code-2020

./: .gitignore  LICENSE  README.md  advent-of-code.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
input/: day7.txt
src/: AdventPrelude.hs
src/AdventPrelude/: Bool.hs  Function.hs  List.hs  Num.hs  State.hs
src/Day1/: Day1.hs  README.md
src/Day10/: Day10.hs  README.md
src/Day11/: Day11.hs  Parser.hs  README.md  Types.hs
src/Day12/: Day12.hs  Parser.hs  README.md  Types.hs
src/Day13/: Day13.hs  Parser.hs  README.md
src/Day14/: Day14.hs  Parser.hs  README.md  Types.hs
src/Day15/: Day15.hs  README.md
src/Day16/: Day16.hs  Parser.hs  README.md
src/Day17/: Day17.hs  README.md
src/Day18/: Day18.hs  README.md
src/Day19/: Day19.hs  Parser.hs  README.md  Types.hs
src/Day2/: Day2.hs  Parser.hs  README.md  Types.hs
src/Day20/: Day20.hs  Parser.hs  README.md  Types.hs
src/Day21/: Day21.hs  Parser.hs  README.md  Types.hs
src/Day22/: Day22.hs  Parser.hs  README.md  Types.hs
src/Day23/: Day23.hs  README.md
src/Day24/: Day24.hs  README.md
src/Day25/: Day25.hs  README.md
src/Day3/: Day3.hs  Parser.hs  README.md  Types.hs
src/Day4/: Day4.hs  Parser.hs  README.md  Types.hs
src/Day5/: Day5.hs  Parser.hs  README.md  Types.hs
src/Day6/: Day6.hs  Parser.hs  README.md  Types.hs
src/Day7/: Day7.hs  Parser.hs  README.md  Types.hs
src/Day8/: Day8.hs  Parser.hs  README.md  Types.hs
src/Day9/: Day9.hs  Parser.hs  README.md
src/Misc/: ListFunctions.hs
src/Types/: Parser.hs  Problem.hs  Solution.hs
test/: Day1Spec.hs  Day2Spec.hs
test/AdventPrelude/: BoolSpec.hs  ListSpec.hs
test/Misc/: ListFunctionsSpec.hs
