cabal-version:       2.4
name:                advent-of-code
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/oskarek/advent-of-code-2020
bug-reports:         https://github.com/oskarek/advent-of-code-2020/issues
license:             MIT
license-file:        LICENSE
author:              Oskar Ek
maintainer:          Oskar Ek <oskarek24@gmail.com>
copyright:           2020 Oskar Ek
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4

source-repository head
  type:                git
  location:            https://github.com/oskarek/advent-of-code-2020.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , containers
                     , optparse-applicative
                     , text
                     , megaparsec
                     , hspec
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Types.Parser
                     , Types.Problem
                     , AdventPrelude.Bool
                     , AdventPrelude.List
                     , Day1.Day1
                     , Day2.Day2
                     , Day2.Parser
                     , Day2.Types

executable advent-of-code
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       advent-of-code
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite advent-of-code-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       advent-of-code
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
